--- a/web-app/css/main-styles.css
+++ b/web-app/css/main-styles.css
@@ -18,12 +18,20 @@ body {
 .news-item {
     text-align: left;
     font-size: 16px;
-    clear: both;
+    border-bottom: 1px solid gray;
+    overflow: hidden;
+    padding: 10px 0;
 }
 .news-item-thumb {
     box-sizing: border-box;
     border-right: 10px solid transparent;
     float: left;
+    width: 30%;
+    min-width: 110px;
+    max-width: 200px;
+}
+.news-item-thumb img {
+    width: 100%;
 }
 .news-item-title {
     font-size: 1em;
@@ -37,4 +45,3 @@ body {
 .menu-title {
     color: white;
 }
-
