--- a/web-app/css/main-styles.css
+++ b/web-app/css/main-styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .starter-template {
-    padding: 40px 15px;
+    padding: 15px 15px;
     text-align: center;
 }
 
@@ -44,4 +44,8 @@ body {
 
 .menu-title {
     color: white;
+}
+
+.panel-body {
+    text-align: left;
 }
