--- a/web-app/css/main-styles.css
+++ b/web-app/css/main-styles.css
@@ -15,6 +15,14 @@ body {
     text-align: left;
 }
 
+.news-item-link {
+    text-align: left;
+    font-size: 16px;
+    color:
+    border-bottom: 1px solid gray;
+    overflow: hidden;
+    padding: 10px 0;
+}
 .news-item {
     text-align: left;
     font-size: 16px;
